test/function/error/main.c
int main(int arg){
    return 0;
}

// golang non prevede main con argomenti o valori di ritorno